[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/campaign/LoadoutPanel.gd" id="1"]

[node name="LoadoutPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]

[node name="SelectionLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
text = "Loadout 0/4"

[node name="CoreTowerList" type="ItemList" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 220)
select_mode = 2

[node name="LockSelectionButton" type="Button" parent="VBox"]
unique_name_in_owner = true
text = "Lock 4-Slot Loadout"
